--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ asttokens==2.4.1
 click==8.1.7
 colorama==0.4.6
 decorator==5.1.1
-Django==4.2
+Django==5.0.7
+django-debug-toolbar==4.4.6
 django-extensions==3.2.3
 executing==2.0.1
 ipython==8.26.0
