--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ mypy-extensions==1.0.0
 packaging==24.1
 parso==0.8.4
 pathspec==0.12.1
+pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 pure-eval==0.2.2
